@@ -241,6 +241,9 @@ Release 2.0.1-alpha - UNRELEASED
 
     HADOOP-8738. junit JAR is showing up in the distro (tucu)
 
+    HADOOP-8737. cmake: always use JAVA_HOME to find libjvm.so, jni.h, jni_md.h.
+    (Colin Patrick McCabe via eli)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HADOOP-8220. ZKFailoverController doesn't handle failure to become active
